--- a/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
+++ b/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
@@ -6,93 +6,134 @@
     <title>Response Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-    * {
-        box-sizing: border-box;
-    }
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 20px;
-    }
-    .card {
-        flex: 1 1 calc(25% - 20px);
-        background-color: #fff;
-        margin: 10px;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        transition: transform 0.3s ease;
-        height: 34vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .card:hover {
-        transform: translateY(-5px);
-    }
-    .icon {
-        font-size: 3rem;
-        margin-bottom: 10px;
-    }
-    .response-type {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
-    .response-count {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 15px;
-    }
-    .reload-time {
-        margin-top: 20px;
-        font-size: 1.2rem;
-        text-align: center;
-    }
-    .green {
-        background-color: #4CAF50;
-        color: white;
-    }
-    .yellow {
-        background-color: #FFC107;
-        color: white;
-    }
-    .blue {
-        background-color: #00BCD4;
-        color: white;
-    }
-    .red {
-        background-color: #F44336;
-        color: white;
-    }
-    @media (max-width: 768px) {
-        .card {
-            flex: 1 1 calc(50% - 20px);
+        * {
+            box-sizing: border-box;
         }
-    }
-    @media (max-width: 480px) {
-        .card {
-            flex: 1 1 100%;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
-    }
-</style>
-
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+        }
+        .card {
+            flex: 1 1 calc(25% - 20px);
+            background-color: #fff;
+            margin: 10px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: transform 0.6s;
+            height: 34vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            perspective: 1000px;
+            cursor: pointer;
+        }
+        .card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            transition: transform 0.6s;
+        }
+        .card.flipped .card-inner {
+            transform: rotateY(180deg);
+        }
+        .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
+        .card-back {
+            transform: rotateY(180deg);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .icon {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+        .response-type {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .response-count {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+        .reload-time {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            text-align: center;
+        }
+        .green {
+            background-color: #4CAF50;
+            color: white;
+        }
+        .yellow {
+            background-color: #FFC107;
+            color: white;
+        }
+        .blue {
+            background-color: #00BCD4;
+            color: white;
+        }
+        .red {
+            background-color: #F44336;
+            color: white;
+        }
+        @media (min-width: 800px) {
+            .card:nth-child(1),
+            .card:nth-child(2) {
+                flex: 1 1 calc(50% - 20px);
+            }
+            .card:nth-child(n+3) {
+                flex: 1 1 calc(25% - 20px);
+            }
+        }
+        @media (max-width: 800px) {
+            .card {
+                flex: 1 1 calc(50% - 20px);
+            }
+        }
+        @media (max-width: 580px) {
+            .card {
+                flex: 1 1 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div>
         <div class="container">
             {% for name, mode, detail in monitor_web %}
-                <div class="card {% if mode == 0 %} green {% elif mode > 0 and mode < 5 %} yellow {% else %} red {% endif %}">
-                    <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode > 0 and mode < 5 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
-                    <div class="response-type">{{ name }}</div>
-                    <div class="response-count">{% if mode >= 1 and mode < 5 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 1 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
+                <div class="card {% if mode == 0 %} green {% elif mode > 0 and mode < 5 %} yellow {% else %} red {% endif %}" {% if detail|length > 0 %}onclick="this.classList.toggle('flipped')"{% endif %}>
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode > 0 and mode < 5 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
+                            <div class="response-type">{{ name }}</div>
+                            <div class="response-count">{% if mode >= 1 and mode < 5 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 1 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
+                        </div>
+                        {% if detail|length > 0 %}
+                            <div class="card-back">
+                                <div style="background-color: rgba(255, 255, 255, 0.25); padding-top: 1.5vh; padding-bottom: 1vh">
+                                    <div style="font-size: 3.5vh">{% if detail %}Details{% endif %}</div>
+                                    <p style="font-size: 3vh; overflow-wrap: break-word;overflow-y: auto;">{{ detail }}</p>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
             {% endfor %}
         </div>
@@ -110,7 +151,7 @@
     <script>
         setInterval(function() {
             location.reload();
-            }, {{ reload_time }});
+        }, {{ reload_time }});
     </script>
 </body>
 </html>
