--- a/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
+++ b/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
@@ -118,12 +118,12 @@
     <div>
         <div class="container">
             {% for name, mode, detail in monitor_web %}
-                <div class="card {% if mode == 0 %} green {% elif mode > 0 and mode < 5 %} yellow {% else %} red {% endif %}" {% if detail|length > 0 %}onclick="this.classList.toggle('flipped')"{% endif %}>
+                <div class="card {% if mode == 0 %} green {% elif mode > 0 and mode < 2 %} yellow {% else %} red {% endif %}" {% if mode > 1 %}onclick="this.classList.toggle('flipped')"{% endif %}>
                     <div class="card-inner">
                         <div class="card-front">
-                            <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode > 0 and mode < 5 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
+                            <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode > 0 and mode < 2 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
                             <div class="response-type">{{ name }}</div>
-                            <div class="response-count">{% if mode >= 1 and mode < 5 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 1 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
+                            <div class="response-count">{% if mode >= 1 and mode < 2 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 1 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
                         </div>
                         {% if detail|length > 0 %}
                             <div class="card-back">
