--- a/src/VNEDC/collection/templates/collection/product_info_report.html
+++ b/src/VNEDC/collection/templates/collection/product_info_report.html
@@ -1,38 +1,221 @@
-{% extends 'collection/base.html' %}
-{% load crispy_forms_tags %}
+{% load static %}
 {% load i18n %}
-{% block js %}
+<!DOCTYPE html>
+<html lang="{{ request.LANGUAGE_CODE }}">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ever Global - {% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'jquery-ui/jquery-ui.min.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap-4.1.3/css/bootstrap.min.css' %}">
+    <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jquery-ui/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'bootstrap-4.1.3/js/bootstrap.min.js' %}"></script>
+    <link href="{% static 'jquery.loading/css/jquery.loading.min.css' %}" rel="stylesheet" />
+    <script src="{% static 'jquery.loading/js/jquery.loading.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'fontawesome-5.4.2/css/all.css' %}">
+    <link rel="stylesheet" href="{% static 'base/css/base.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <style>
+        table {
+            table-layout: fixed; /* Ensures all columns have equal width */
+        }
+        .box-nav-container{
+            display: flex;
+            gap: 20px;
+            padding-top: 15px;
+        }
+    </style>
+    <script>
+        function set_session() {
+            var plant = $("#id_plant").val();
+            var mach = $("#id_mach").val();
+            var data_date = $("#id_data_date").val();
+            var enable_mode = $("#toggle_record_date").is(':checked') ? 'on' : 'off';
 
-{% endblock js %}
-{% block content %}
-<div class="row">
-    <div class="col-12">
-        <table border="1" class='table table-bordered'>
-            <tr>
-                <th style="text-align: center;width: 5%;">填寫日期</th>
-                <th style="text-align: center;width: 5%;">廠別</th>
-                <th style="text-align: center;width: 5%;">機台</th>
-                <th style="text-align: center;width: 10%;">換凝固劑時間</th>
-                <th style="text-align: center;width: 10%;">換乳膠時間</th>
-                <th style="text-align: center;width: 10%;">換模時間</th>
-                <th style="text-align: center;width: 10%;">備註1</th>
-                <th style="text-align: center;width: 30%;">備註2</th>
-                <th style="text-align: center;width: 10%;">更新時間</th>
-            </tr>
-            {% for result in results %}
-            <tr>
-                <td>{{ result.data_date|date:"Y/m/d" }}</td>
-                <td>{{ result.plant_id }}</td>
-                <td>{{ result.mach_id }}</td>
-                <td style="text-align: center">{{ result.coagulant_time_hour }}:{{ result.coagulant_time_min }}</td>
-                <td style="text-align: center">{{ result.latex_time_hour }}:{{ result.latex_time_min }}</td>
-                <td style="text-align: center">{{ result.tooling_time_hour }}:{{ result.tooling_time_min }}</td>
-                <td>{{ result.remark }}</td>
-                <td>{{ result.remark2 }}</td>
-                <td>{{ result.update_at|date:"Y/m/d H:i:s" }}</td>
-            </tr>
-            {% endfor %}
-        </table>
+            if(plant != "" && mach != "" && data_date != "") {
+                $("<input />").attr("type", "hidden")
+                              .attr("name", "enable_mode")
+                              .attr("value", enable_mode)
+                              .appendTo("#session_form");
+                $("#session_form").submit();
+            }
+        }
+        $(document).ready(function() {
+            // Handle Plant change
+            $('#id_plant').on('change', function () {
+                $('#session_form').attr('action', '/collection/product_info_report/');
+                $('#session_form').submit();
+            });
+
+            // Handle Machine change
+            $('#id_mach').on('change', function () {
+                $('#session_form').attr('action', '/collection/product_info_report/');
+                $('#session_form').submit();
+            });
+
+            // Handle Date change
+            $('#id_data_date').on('change', function () {
+                $('#session_form').attr('action', '/collection/product_info_report/');
+                $('#session_form').submit();
+            });
+
+            // Handle Date change
+            $('#id_to_date').on('change', function () {
+                $('#session_form').attr('action', '/collection/product_info_report/');
+                $('#session_form').submit();
+            });
+        });
+    </script>
+</head>
+<body>
+    <div class="sidebar collapsed" id="sidebar">
+        <div class="toggle-btn" id="toggle-btn">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="top-links">
+            <ul>
+                <li>
+                    {% include 'bases/lang.html' %}
+                </li>
+            </ul>
+        </div>
+        <ul>
+            <li><a href="{% url 'collection_index' %}"><i class="fas fa-cogs"></i> <span>{% trans "Key Parameter" %}</span></a></li>
+        </ul>
+        <div class="bottom-links">
+            <div class="user-info">
+                <ul>
+                    <li><i class="fas fa-user"></i> <span>{{ user.username }}</span></li>
+                </ul>
+            </div>
+            <ul>
+                <li><a href="{% url 'user_info' %}"><i class="fas fa-key"></i> <span>{% trans 'Personal Setting' %}</span></a></li>
+                <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> <span>{% trans "Logout" %}</span></a></li>
+            </ul>
+        </div>
     </div>
-</div>
-{% endblock content %}
+    <div class="content" id="content" style="position: relative;">
+        <div class="container-fluid" style="padding-left: 0px;padding-right: 0px">
+            <div class="card-header" style="height: 111px">
+                {% if user.is_authenticated %}
+                <form action="{% url 'rd_report' %}" method="POST" id="session_form">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div id="div_id_plant" class="form-group">
+                                <label for="id_plant" class="requiredField">
+                                    {% trans "Plant" %}<span class="asteriskField">*</span>
+                                </label>
+                                <div>
+                                    <select name="plant" onchange="set_session();plant_change();" class="select custom-select" required="" id="id_plant">
+                                        <option value="">---------</option>
+                                        {% for plant in plants %}
+                                        <option value="{{ plant }}" {% if plant.plant_code == sPlant %} selected {% endif %}>{{ plant }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div id="div_id_mach" class="form-group">
+                                <label for="id_mach" class="requiredField">
+                                    {% trans "Machine" %}<span class="asteriskField">*</span>
+                                </label>
+                                <div>
+                                    <select name="mach" onchange="set_session()" class="select custom-select" required="" id="id_mach">
+                                        <option value="">---------</option>
+                                        {% for mach in machs %}
+                                        <option value="{{ mach.mach_code }}" {% if mach.mach_code == sMach %} selected {% endif %}>{{ mach.mach_name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <label for="data_date">{% trans "Start Date" %}*</label>
+                            <input id="id_data_date" class="form-control" name="data_date" type="date" value="{{ sData_date }}" required="" />
+                        </div>
+                        <div class="col-md-2">
+                            <label for="to_date">{% trans "End Date" %}*</label>
+                            <input id="id_to_date" class="form-control" name="to_date" type="date" value="{{ sTo_date }}" required="" />
+                        </div>
+                        <div class="col-md-2">
+                            <label for="data_date"></label>
+                            <div class="box-nav-container">
+                                <a class="box-nav-btn" href="{% url 'param_value' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Chart' %}">
+                                    <i class="fas fa-chart-line"></i>
+                                </a>
+                                <a class="box-nav-btn" href="{% url 'param_value_product' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Chart' %}">
+                                    <i class="fas fa-chart-bar"></i>
+                                </a>
+                                <a class="box-nav-btn" href="{% url 'rd_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
+                                    <i class="far fa-sticky-note"></i>
+                                </a>
+                                <a class="box-nav-btn" href="{% url 'product_info_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
+                                        <i class="fa fa-info"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                {% endif %}
+            </div>
+            <div class="content">
+                <div class="row m-3" style="height:500px">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12" style="width: 100% ">
+                                <table border="1" class='table table-bordered'>
+                                    <tr>
+                                        <th style="text-align: center;width: 13.5%;">填寫日期</th>
+                                        <th style="text-align: center;width: 10.5%;">廠別</th>
+                                        <th style="text-align: center;width: 12%;">機台</th>
+                                        <th style="text-align: center;width: 10%;">換凝固劑時間</th>
+                                        <th style="text-align: center;width: 10%;">換乳膠時間</th>
+                                        <th style="text-align: center;width: 10%;">換模時間</th>
+                                        <th style="text-align: center;width: 10%;">備註1</th>
+                                        <th style="text-align: center;width: 25%;">備註2</th>
+                                        <th style="text-align: center;width: 15%;">更新時間</th>
+                                    </tr>
+                                    {% for result in results %}
+                                    <tr>
+                                        <td>{{ result.data_date|date:"Y/m/d" }}</td>
+                                        <td>{{ result.plant_id }}</td>
+                                        <td>{{ result.mach_id }}</td>
+                                        <td style="text-align: center">{{ result.coagulant_time_hour }}:{{ result.coagulant_time_min }}</td>
+                                        <td style="text-align: center">{{ result.latex_time_hour }}:{{ result.latex_time_min }}</td>
+                                        <td style="text-align: center">{{ result.tooling_time_hour }}:{{ result.tooling_time_min }}</td>
+                                        <td>{{ result.remark }}</td>
+                                        <td>{{ result.remark2 }}</td>
+                                        <td>{{ result.update_at|date:"Y/m/d H:i:s" }}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+                    <a href="{% url 'daily_info_create' %}" class="btn btn-info" style="width:220px;">
+                        {% trans 'Production Data' %}
+                    </a>
+                    {% for process in processes %}
+                    <a href="{% url 'record' process.process_code %}" class="btn {% if process.process_code == process_code %}btn-dark{% else %}btn-info{% endif %}" style="width:220px;margin-top: 5px">
+                        {% if lang == "zh-hant" %}
+                            {{ process.process_tw }}
+                        {% elif lang == "vi" %}
+                            {{ process.process_vn }}
+                        {% elif lang == "zh-hans" %}
+                            {{ process.process_cn }}
+                        {% else %}
+                            {{ process.process_name }}
+                        {% endif %}
+                    </a>
+                    {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
