--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -23,6 +23,7 @@
 
     $(document).ready(function() {
         $('.select2').select2({
+            tags: true,
             placeholder: '---',
             allowClear: true
         });
