--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -146,11 +146,14 @@ function validate(evt) {
                     <a class="box-nav-btn" href="{% url 'param_value_product' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Chart' %}">
                         <i class="fas fa-chart-bar"></i>
                     </a>
+                    <a class="box-nav-btn" href="{% url 'param_value_rate' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Chart' %}">
+                        <i class="fa fa-chart-area"></i>
+                    </a>
                     <a class="box-nav-btn" href="{% url 'rd_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
                         <i class="far fa-sticky-note"></i>
                     </a>
                     <a class="box-nav-btn" href="{% url 'product_info_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
-                            <i class="fa fa-info"></i>
+                        <i class="fa fa-info"></i>
                     </a>
                 </div>
             </div>
