--- a/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
+++ b/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Response Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'fontawesome-5.4.2\css\all.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap-4.1.3\css\bootstrap.min.css' %}">
     <style>
         * {
             box-sizing: border-box;
@@ -14,7 +16,7 @@
             margin: 0;
             padding: 0;
         }
-        .container {
+        .container-c {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -29,12 +31,10 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
             transition: transform 0.6s;
-            height: 34vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             perspective: 1000px;
-            cursor: pointer;
         }
         .card-inner {
             position: relative;
@@ -47,7 +47,6 @@
             transform: rotateY(180deg);
         }
         .card-front, .card-back {
-            position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
@@ -63,7 +62,7 @@
             margin-bottom: 10px;
         }
         .response-type {
-            font-size: 1.5rem;
+            font-size: 1rem;
             font-weight: bold;
             margin-bottom: 5px;
         }
@@ -100,20 +99,24 @@
             color: white;
         }
         th, td {
-            border-radius: 10px;
+            border-radius: 5px;
             padding: 10px;
+            margin: 10px;
             text-align: center
         }
         table {
             border-spacing: 3px;
         }
+
+
+
         @media (min-width: 800px) {
-            .card:nth-child(1),
-            .card:nth-child(2) {
-                flex: 1 1 calc(50% - 20px);
+            .error {
+                flex: 1 1 calc(100% - 20px);
             }
-            .card:nth-child(n+3) {
-                flex: 1 1 calc(25% - 20px);
+
+            .normal {
+                flex: 1 1 calc(10% - 20px);
             }
         }
         @media (max-width: 800px) {
@@ -126,49 +129,44 @@
                 flex: 1 1 100%;
             }
         }
+
+        .clearfix{
+            clear:both;
+        }
     </style>
 </head>
 <body>
     <div>
-        <div class="container">
+        <div class="container-c">
             {% for name, mode, detail, msg in monitor_web %}
-                <div class="card {% if mode == 0 %} green {% elif mode < 0 %} yellow {% else %} red {% endif %}" onclick="this.classList.toggle('flipped')">
+                <div class="card {% if mode == 0 %}normal green {% elif mode < 0 %}normal yellow {% else %}error red {% endif %}" error="{{ mode }}">
                     <div class="card-inner">
                         <div class="card-front">
                             <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode < 0 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
                             <div class="response-type">{{ name }}</div>
-                            <div class="response-count">{% if mode == 0 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 0 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
-                        </div>
-                        {% if detail|length > 0 %}
-                            <div class="card-back">
-                                <i class="fas {% if mode == 0 %} fa-check-circle {% elif mode < 0 %} fa-exclamation-circle {% else %} fa-bug {% endif %} icon"></i>
-                                <div class="response-type">{{ name }}</div>
-                                <div class="response-count">{% if mode == 0 %}Error: <br><p style="font-size: 4.5vh">{{ detail }}</p>{% elif mode < 0 %} {{ '' }}{% else %}Error: {{ mode }} devices{% endif %}</div>
-                                <div style="background-color: rgba(255, 255, 255, 0.25); padding-top: 1.5vh; padding-bottom: 1vh">
-    {#                                    <div style="font-size: 3.5vh">{% if detail %}Details{% endif %}</div>#}
-    {#                                    <p style="font-size: 3vh; overflow-wrap: break-word;overflow-y: auto;">{{ detail }}</p>#}
-    {#                                #}
-    {##}
-    {#                                CSS TABLE ERROR ALERT#}
-                                    <table style="color: black">
-                                        <tr style="background: #843c0c;">
-                                            <th>DEVICE</th>
-                                            <th>ISSUE TIME</th>
-                                            <th>ERROR MSG</th>
+                            {% if mode > 0 %}
+                            <div style="background-color: rgba(255, 255, 255, 0.25); padding-top: 1.5vh; padding-bottom: 1vh;border-radius: 5px;">
+                                <table style="color: black; width:100%;">
+                                    <tr style="background: #843c0c;">
+                                        <th>DEVICE</th>
+                                        <th>ISSUE TIME</th>
+                                        <th>ERROR MSG</th>
+                                        <th>REF LINK</th>
+                                    </tr>
+                                    {% for dn, ua, mg, link in msg %}
+                                        <tr style="background: #fff2cc">
+                                            <td>{{ dn }}</td>
+                                            <td>{{ ua|date:"Y/m/d H:i:s" }}</td>
+                                            <td>{{ mg }}</td>
+                                            <td>{% if link %}<a href="{{ link }}" class="btn btn-info" target="_blank">REF</a>{% endif %}</td>
                                         </tr>
-                                        {% for dn, ua, mg in msg %}
-                                            <tr style="background: #fff2cc">
-                                                <td>{{ dn }}</td>
-                                                <td>{{ ua }}</td>
-                                                <td>{{ mg }}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    </table>
-                                {#END CSS TABLE ERROR ALERT#}
-                                </div>
+                                    {% endfor %}
+                                </table>
                             </div>
-                        {% endif %}
+                            {% endif %}
+                        </div>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
             {% endfor %}
         </div>
@@ -184,9 +182,22 @@
         </div>
     </div>
     <script>
-        setInterval(function() {
-            location.reload();
-        }, {{ reload_time }});
+        //setInterval(function() {
+        //    location.reload();
+        //}, {{ reload_time }});
+
+        document.addEventListener("DOMContentLoaded", () => {
+          // 選取所有的 div 元素
+          const divs = document.querySelectorAll("div");
+          // 尋找 error="1" 的元素
+          divs.forEach(div => {
+            if (div.getAttribute("error") === "1") {
+              // 將其移動到父節點的第一個子節點
+              div.parentNode.insertBefore(div, div.parentNode.firstChild);
+            }
+          });
+        });
+
     </script>
 </body>
 </html>
