--- a/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
+++ b/src/VNEDC/spiderweb/templates/spiderweb/spiderweb.html
@@ -186,9 +186,9 @@
         </div>
     </div>
     <script>
-        //setInterval(function() {
-        //    location.reload();
-        //}, {{ reload_time }});
+        setInterval(function() {
+            location.reload();
+        }, {{ reload_time }});
 
         document.addEventListener("DOMContentLoaded", () => {
           // 選取所有的 div 元素
