--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -56,6 +56,9 @@
             {% if user|has_group:"MES輔助工具" %}
             <li><a href="{% url 'fast_check' %}"><i class="fas fa-wrench"></i> <span>{% trans "MES Tools" %}</span></a></li>
             {% endif %}
+            {% if user|has_group:"Warehouse倉管系統" %}
+            <li><a href="{% url 'warehouse_index' %}"><i class="fa fa-truck"></i> <span>{% trans "Warehouse倉管系統" %}</span></a></li>
+            {% endif %}
             <!--<li><a href="#home"><i class="fas fa-home"></i> <span>關鍵參數</span></a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i> <span>{% trans "Contact" %}</span></a></li>
             <li><a href="#about"><i class="fas fa-info-circle"></i> <span>{% trans "About" %}</span></a></li>-->
